BAH-2993 | Fixed. css alignment for abha creation otp input and demographics

--- a/src/ndhm.scss
+++ b/src/ndhm.scss
@@ -62,4 +62,7 @@ button {
     button {
         height: 30px;
     }
+    .demo-fetch-button {
+        margin-top: 22px;
+    }
 }
